# yarnpath

./: CMakeLists.txt  NOTES.md  README.md
app/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  cli_common.hpp  command_geometry.cpp  command_makefile.cpp  command_obj.cpp  command_parse.cpp  command_stitch.cpp  command_surface.cpp  command_yarn.cpp
common/: CMakeLists.txt  logging.hpp
docs/: fixing-test-issues.md  geometry-spline-plan.md  stage1-instructions-to-graph.md  stage2-graph-to-yarn-path.md  stage3-surface-relaxation.md
examples/: config.json  simple-cable.txt  simple-pattern-2.txt  simple-pattern.txt  stockinette-3x3.txt
geometry/: CMakeLists.txt  crossover_geometry.cpp  crossover_geometry.hpp  cubic_bezier.cpp  cubic_bezier.hpp  fabric_surface.hpp  gauge.hpp  geometry.cpp  geometry.hpp  geometry_build_state.cpp  geometry_build_state.hpp  geometry_builder.cpp  geometry_builder.hpp  geometry_path.cpp  geometry_path.hpp  geometry_validator.cpp  geometry_validator.hpp  loop_precompute.cpp  loop_precompute.hpp  physical_loop.cpp  physical_loop.hpp  position_resolver.cpp  position_resolver.hpp  stitch_glyph.cpp  stitch_glyph.hpp  vec3.hpp  yarn_properties.hpp
instructions/: CMakeLists.txt  row_instruction.cpp  row_instruction.hpp  stitch_instruction.cpp  stitch_instruction.hpp
math/: CMakeLists.txt  catmull_rom_spline.cpp  catmull_rom_spline.hpp  cubic_bezier.cpp  cubic_bezier.hpp  curvature_utils.cpp  curvature_utils.hpp  vec3.hpp
parser/: CMakeLists.txt  ast.hpp  emitter.cpp  emitter.hpp  parser.cpp  parser.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp
scripts/: analyze_obj.py
serialization/: CMakeLists.txt  config_json.hpp  geometry_path_json.hpp  instruction_json.hpp  json_serialization.hpp  stitch_graph_json.hpp  surface_graph_json.hpp  yarn_path_json.hpp
stitch_graph/: CMakeLists.txt  stitch_node.cpp  stitch_node.hpp  stitch_operation.cpp  stitch_operation.hpp
stitch_shape/: CMakeLists.txt  loop_dimensions.cpp  loop_dimensions.hpp  stitch_enums.hpp  stitch_shape.cpp  stitch_shape.hpp
surface/: CMakeLists.txt  surface.cpp  surface.hpp  surface_builder.cpp  surface_builder.hpp  surface_constraint.hpp  surface_edge.hpp  surface_forces.cpp  surface_forces.hpp  surface_graph.cpp  surface_graph.hpp  surface_node.hpp  surface_solver.cpp  surface_solver.hpp  surface_visualizer.cpp  surface_visualizer.hpp
tests/: CMakeLists.txt  main.cpp  test_bezier.cpp  test_catmull_rom.cpp  test_continuity.cpp  test_crossover_claiming.cpp  test_fabric_normal.cpp  test_fabric_surface.cpp  test_geometry.cpp  test_geometry_knit_reference_behavior.cpp  test_geometry_path.cpp  test_geometry_ref_curvature_compliance_ext.cpp  test_geometry_ref_degenerate_boundaries.cpp  test_geometry_ref_global_clearance_ext.cpp  test_geometry_ref_join_continuity_ext.cpp  test_geometry_ref_local_stitch_shapes.cpp  test_geometry_ref_numerical_robustness.cpp  test_geometry_ref_output_validity.cpp  test_geometry_ref_parameter_sensitivity.cpp  test_geometry_ref_sampling_consistency.cpp  test_geometry_ref_symmetry_reflection_ext.cpp  test_geometry_reference_scaling_symmetry.cpp  test_geometry_reference_segment_transitions.cpp  test_geometry_reference_self_contact.cpp  test_helpers.hpp  test_instructions.cpp  test_loop_chain_geometry.cpp  test_loop_precompute.cpp  test_loop_shape.cpp  test_parser.cpp  test_segment_frame.cpp  test_serialization.cpp  test_stitch_graph.cpp  test_stitch_shape.cpp  test_surface_builder.cpp  test_surface_forces.cpp  test_surface_graph.cpp  test_surface_solver.cpp  test_surface_yarn_length.cpp  test_topology_geometry.cpp  (+5 more)
visualizer/: CMakeLists.txt  visualizer.cpp  visualizer.hpp
yarn/: CMakeLists.txt  gauge.hpp  yarn_properties.hpp
yarn_path/: CMakeLists.txt  yarn_path.cpp  yarn_path.hpp
